Add: markdown sections to helper notebook

--- a/notebooks/topostats_file_helper_example.ipynb
+++ b/notebooks/topostats_file_helper_example.ipynb
@@ -14,30 +14,94 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load topostats file"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load topostats file\n",
-    "file = \"./tests/resources/file.topostats\"\n",
+    "file = \"../tests/resources/file.topostats\"\n",
     "helper = TopoFileHelper(file)\n",
     "# Clear logging output\n",
     "clear_output(wait=False)\n",
-    "\n",
+    "print(\"File loaded\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Print the structure of the file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Print the structure of the file\n",
-    "helper.pretty_print_structure()\n",
-    "\n",
+    "helper.pretty_print_structure()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Find data within the file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Find the name of the data we want, we know it contains \"ordered_trace_heights\" and we want grain 2, but don't know\n",
     "# what keys precede it\n",
-    "helper.find_data([\"ordered_trace_heights\", \"2\"])\n",
-    "\n",
+    "helper.find_data([\"ordered_trace_heights\", \"2\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Retrieve data from the file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Get some data from the file\n",
     "cropped_image = helper.get_data(\"grain_trace_data/above/cropped_images/2\")\n",
     "ordered_trace_heights = helper.get_data(\"grain_trace_data/above/ordered_trace_heights/2\")\n",
     "cumulative_distances = helper.get_data(\"grain_trace_data/above/ordered_trace_cumulative_distances/2\")\n",
-    "ordered_traces = helper.get_data(\"grain_trace_data/above/ordered_traces/2\")\n",
-    "\n",
+    "ordered_traces = helper.get_data(\"grain_trace_data/above/ordered_traces/2\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Use the retrieved data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Plot the image\n",
     "plt.imshow(cropped_image)\n",
     "# Create a basic colour scale for the moleucle trace\n",
@@ -47,6 +111,8 @@
     "plt.show()\n",
     "# Plot the height of the molecule trace against the cumulative distance in nanometres\n",
     "plt.plot(cumulative_distances, ordered_trace_heights)\n",
+    "plt.xlabel(\"Cumulative distance (nm)\")\n",
+    "plt.ylabel(\"Height (nm)\")\n",
     "plt.show()"
    ]
   }
