--- a/pleng.ipynb
+++ b/pleng.ipynb
@@ -233,6 +233,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def eucledian_dist(pleng, s):\n",
+    "    return 4 * pleng * s * (1 - (2 * pleng / s)) * (1 - np.exp(-s / (2 * pleng)))\n",
+    "\n",
+    "\n",
     "def betterpleng(points: np.ndarray, maximum_length_nm: float, plot=False) -> tuple[float, float]:\n",
     "    if plot:\n",
     "        fig, ax = plt.subplots(figsize=(5, 5))\n",
@@ -244,12 +248,16 @@
     "    distance_cos_angle_pairs = {}\n",
     "    distances = []\n",
     "    cos_angles = []\n",
+    "    euclidean_distances = []\n",
     "\n",
     "    # iterate over each point\n",
     "    first_vector = points[1] - points[0]\n",
+    "    first_point = points[0]\n",
     "    first_vector /= np.linalg.norm(first_vector)\n",
     "    for point_index, point in enumerate(points):\n",
     "        if point_index <= 2:\n",
+    "            if point_index != 0:\n",
+    "                current_distance += np.linalg.norm(point - points[point_index - 1])\n",
     "            continue\n",
     "        if point_index == len(points) - 1:\n",
     "            # don't include the last set of points since they're not complete\n",
@@ -258,6 +266,7 @@
     "        vector_distance = np.linalg.norm(vector)\n",
     "        vector /= vector_distance\n",
     "        cos_angle = np.dot(first_vector, vector)\n",
+    "        euclidean_distance_to_first_vector = np.linalg.norm(point - first_point)\n",
     "        if cos_angle == 0:\n",
     "            print(\"[warning] cos(angle) is orthogonal to first vector, can't be fitted to log plot\")\n",
     "        elif cos_angle < 0:\n",
@@ -266,18 +275,25 @@
     "        if current_distance > maximum_length_nm:\n",
     "            # reset this section and add stats to dictionary\n",
     "            first_vector = vector\n",
+    "            first_point = point\n",
     "            current_distance = 0\n",
     "            # add the distances and cos angles to the list\n",
-    "            distance_cos_angle_pairs[point_index] = {\"distances\": distances, \"cos_angles\": cos_angles}\n",
+    "            distance_cos_angle_pairs[point_index] = {\n",
+    "                \"distances\": distances,\n",
+    "                \"cos_angles\": cos_angles,\n",
+    "                \"euclidean_distances\": euclidean_distances,\n",
+    "            }\n",
     "            distances = []\n",
     "            cos_angles = []\n",
+    "            euclidean_distances = []\n",
     "            if plot:\n",
     "                ax.scatter(point[1], point[0], c=\"green\")\n",
     "        else:\n",
     "            if plot:\n",
-    "                ax.scatter(point[1], point[0], c=\"blue\")\n",
+    "                ax.scatter(point[1], point[0], c=\"blue\", s=1)\n",
     "            distances.append(current_distance)\n",
     "            cos_angles.append(cos_angle)\n",
+    "            euclidean_distances.append(euclidean_distance_to_first_vector)\n",
     "\n",
     "    if plot:\n",
     "        ax.set_aspect(\"equal\")\n",
@@ -292,35 +308,70 @@
     "        if plot:\n",
     "            ax.plot(distances, cos_angles, label=f\"point {point_index}\")\n",
     "    if plot:\n",
-    "        ax.legend()\n",
+    "        # put the legend to the rhs of the plot and wrap it do it doesn't go off the screen\n",
+    "        ax.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5), ncol=len(distance_cos_angle_pairs) // 4)\n",
     "        plt.show()\n",
     "\n",
-    "    # calculate the average of the cos angles\n",
+    "    # calculate the average of the cos angles, but since they are all at different distances, resample to use common\n",
+    "    # distances, we need to ditch any points that are outside the smallest range of distances\n",
     "    average_cos_angles = []\n",
+    "    # find the smallest range of distances\n",
+    "    largest_minimum = -np.inf\n",
+    "    smallest_maximum = np.inf\n",
     "    for point_index, distance_cos_angle_pair in distance_cos_angle_pairs.items():\n",
-    "        cos_angles = distance_cos_angle_pair[\"cos_angles\"]\n",
     "        distances = distance_cos_angle_pair[\"distances\"]\n",
-    "        interpolated_cos_angles = np.interp(np.arange(0, maximum_length_nm, 0.1), distances, cos_angles)\n",
+    "        smallest_distance = np.min(distances)\n",
+    "        largest_distance = np.max(distances)\n",
+    "        if smallest_distance > largest_minimum:\n",
+    "            largest_minimum = smallest_distance\n",
+    "        if largest_distance < smallest_maximum:\n",
+    "            smallest_maximum = largest_distance\n",
+    "    common_distances = np.arange(largest_minimum, smallest_maximum, 0.1)\n",
+    "    # resample each set of distances and cos angles to the common distances\n",
+    "    if plot:\n",
+    "        fig, ax = plt.subplots(figsize=(5, 5))\n",
+    "    for point_index, distance_cos_angle_pair in distance_cos_angle_pairs.items():\n",
+    "        distances = distance_cos_angle_pair[\"distances\"]\n",
+    "        cos_angles = distance_cos_angle_pair[\"cos_angles\"]\n",
+    "        euclidean_distances = distance_cos_angle_pair[\"euclidean_distances\"]\n",
+    "        interpolated_cos_angles = np.interp(common_distances, distances, cos_angles)\n",
+    "        interpolated_euclidean_distances = np.interp(common_distances, distances, euclidean_distances)\n",
     "        average_cos_angles.append(interpolated_cos_angles)\n",
+    "        if plot:\n",
+    "            ax.plot(common_distances, interpolated_cos_angles, label=f\"point {point_index}\")\n",
+    "\n",
+    "    if plot:\n",
+    "        ax.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5), ncol=len(distance_cos_angle_pairs) // 4)\n",
+    "        plt.show()\n",
+    "\n",
     "    average_cos_angles = np.mean(average_cos_angles, axis=0)\n",
+    "\n",
+    "    if plot:\n",
+    "        fig, ax = plt.subplots()\n",
+    "        ax.plot(common_distances, average_cos_angles)\n",
+    "        plt.title(\"average cos angles\")\n",
+    "        plt.show()\n",
     "\n",
     "    inverse_log_cos_angles = -np.log(average_cos_angles)\n",
     "\n",
     "    if plot:\n",
     "        fig, ax = plt.subplots()\n",
-    "        ax.plot(np.arange(0, maximum_length_nm, 0.1), inverse_log_cos_angles)\n",
+    "        ax.plot(common_distances, inverse_log_cos_angles)\n",
+    "        plt.title(\"inverse log cos angles\")\n",
     "        plt.show()\n",
     "\n",
     "    def linear(x, a, b):\n",
     "        return a * x + b\n",
     "\n",
-    "    popt, pcov = curve_fit(linear, np.arange(0, maximum_length_nm, 0.1), inverse_log_cos_angles)\n",
+    "    popt, pcov = curve_fit(linear, common_distances, inverse_log_cos_angles)\n",
     "\n",
     "    if plot:\n",
     "        fig, ax = plt.subplots()\n",
-    "        ax.plot(np.arange(0, maximum_length_nm, 0.1), linear(np.arange(0, maximum_length_nm, 0.1), *popt))\n",
-    "        ax.plot(np.arange(0, maximum_length_nm, 0.1), inverse_log_cos_angles)\n",
-    "        plt.show()\n",
+    "        ax.plot(common_distances, linear(common_distances, *popt), label=\"fit\")\n",
+    "        ax.plot(common_distances, inverse_log_cos_angles, label=\"data\")\n",
+    "        plt.title(\"fit\")\n",
+    "        plt.legend()\n",
+    "        plt.show\n",
     "\n",
     "    # the slope is 1/(2p) where p is the pleng\n",
     "    pleng = 1 / (2 * popt[0])\n",
@@ -328,26 +379,52 @@
     "\n",
     "    # what is a good way to measure confidence in the fit?\n",
     "    # one way is to calculate the residuals of the fit\n",
-    "    residuals = inverse_log_cos_angles - linear(np.arange(0, maximum_length_nm, 0.1), *popt)\n",
+    "    residuals = inverse_log_cos_angles - linear(common_distances, *popt)\n",
     "    if plot:\n",
     "        fig, ax = plt.subplots()\n",
-    "        ax.plot(np.arange(0, maximum_length_nm, 0.1), residuals)\n",
+    "        ax.plot(common_distances, residuals)\n",
+    "        plt.title(\"residuals\")\n",
     "        plt.show()\n",
-    "\n",
-    "    # another way is to calculate the covariance matrix\n",
-    "    print(pcov)\n",
-    "    # the diagonal of the covariance matrix gives the variance of the parameters\n",
-    "    # the square root of the variance gives the standard deviation\n",
-    "    print(np.sqrt(np.diag(pcov)))\n",
     "\n",
     "    # calculate root mean squared error\n",
     "    rmse = np.sqrt(np.mean(residuals**2))\n",
     "    print(f\"rmse: {rmse}\")\n",
     "\n",
+    "    # calculate pleng using euclidean distances\n",
+    "\n",
+    "    # plot the distances and euclidean distances\n",
+    "    if plot:\n",
+    "        fig, ax = plt.subplots()\n",
+    "    for point_index, distance_cos_angle_pair in distance_cos_angle_pairs.items():\n",
+    "        distances = distance_cos_angle_pair[\"distances\"]\n",
+    "        euclidean_distances = distance_cos_angle_pair[\"euclidean_distances\"]\n",
+    "        if plot:\n",
+    "            ax.plot(distances, euclidean_distances, label=f\"point {point_index}\")\n",
+    "    if plot:\n",
+    "        ax.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5), ncol=len(distance_cos_angle_pairs) // 4)\n",
+    "        plt.show()\n",
+    "\n",
+    "    # calculate average euclidean distances\n",
+    "    average_euclidean_distances = []\n",
+    "    for point_index, distance_cos_angle_pair in distance_cos_angle_pairs.items():\n",
+    "        euclidean_distances = distance_cos_angle_pair[\"euclidean_distances\"]\n",
+    "        distances = distance_cos_angle_pair[\"distances\"]\n",
+    "        interpolated_euclidean_distances = np.interp(\n",
+    "            np.arange(0, maximum_length_nm, 0.1), distances, euclidean_distances\n",
+    "        )\n",
+    "        average_euclidean_distances.append(interpolated_euclidean_distances)\n",
+    "    average_euclidean_distances = np.mean(average_euclidean_distances, axis=0)\n",
+    "\n",
+    "    if plot:\n",
+    "        fig, ax = plt.subplots()\n",
+    "        ax.plot(np.arange(0, maximum_length_nm, 0.1), average_euclidean_distances)\n",
+    "        plt.title(\"average euclidean distances\")\n",
+    "        plt.show()\n",
+    "\n",
     "    return pleng, rmse\n",
     "\n",
     "\n",
-    "# betterpleng(custom_coords, 10)"
+    "betterpleng(spline_coords, maximum_length_nm=7, plot=True)"
    ]
   },
   {
@@ -370,6 +447,26 @@
     "pleng, rmse = betterpleng(spline_coords, maximum_length_nm=best_max_length, plot=True)\n",
     "\n",
     "print(f\"best pleng: {pleng} with rmse: {rmse} at maximum length: {best_max_length}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# explore what happens are p and s are changed for many different values\n",
+    "p_values = np.linspace(0.01, 0.1, 100)\n",
+    "s_values = np.linspace(0.1, 1, 100)\n",
+    "rsquared_values = np.zeros((len(p_values), len(s_values)))\n",
+    "for p_index, pleng in enumerate(p_values):\n",
+    "    for s_index, s in enumerate(s_values):\n",
+    "        rsquared_values[p_index, s_index] = eucledian_dist(pleng, s)\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "cax = ax.matshow(rsquared_values, cmap=\"viridis\")\n",
+    "fig.colorbar(cax)\n",
+    "plt.show()"
    ]
   }
  ],
