--- a/pleng.ipynb
+++ b/pleng.ipynb
@@ -45,7 +45,10 @@
     "    spline_coords = spline_data[\"spline_coords\"]\n",
     "\n",
     "    # plot spline coords\n",
-    "    plt.plot(spline_coords[:, 0], spline_coords[:, 1])"
+    "    fig, ax = plt.subplots(figsize=(10, 10))\n",
+    "    # ax.plot(spline_coords[:, 0], spline_coords[:, 1], marker=\"o\", markersize=1)\n",
+    "    ax.scatter(spline_coords[:, 0], spline_coords[:, 1], s=1)\n",
+    "    plt.show()"
    ]
   },
   {
@@ -95,120 +98,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def mypleng(points: np.ndarray, max_length: float):\n",
-    "\n",
-    "    fig, ax = plt.subplots(figsize=(5, 5))\n",
-    "\n",
-    "    ax.plot(points[:, 1], points[:, 0], c=\"red\")\n",
-    "    ax.scatter(points[0, 1], points[0, 0], c=\"blue\")\n",
-    "\n",
-    "    # starting from the first vector, calculate the angle difference of each vector to the first one\n",
-    "    maximum_length_nm = 20\n",
-    "    current_length = 0\n",
-    "    group_count = 0\n",
-    "\n",
-    "    distances = []\n",
-    "    angle_diffs = []\n",
-    "\n",
-    "    distance_angle_diff_pairs = {}\n",
-    "\n",
-    "    # first vector\n",
-    "    first_vector = points[1] - points[0]\n",
-    "    first_angle = np.arctan2(first_vector[1], first_vector[0])\n",
-    "    # iterate over the coordinates\n",
-    "    for coord_index, coord in enumerate(points):\n",
-    "        if coord_index < 2:\n",
-    "            continue\n",
-    "        if coord_index == len(points) - 1:\n",
-    "            break\n",
-    "        vector = coord - points[coord_index - 1]\n",
-    "        angle = np.arctan2(vector[1], vector[0])\n",
-    "        angle_diff = angle - first_angle\n",
-    "        # print(f\"angle diff: {angle_diff}\")\n",
-    "\n",
-    "        # calculate the length of the vector\n",
-    "        vector_length = np.linalg.norm(vector)\n",
-    "        current_length += vector_length\n",
-    "        if current_length > maximum_length_nm:\n",
-    "            # set as new first vector\n",
-    "            first_vector = vector\n",
-    "            first_angle = angle\n",
-    "            # Add current distance angle diffs to list\n",
-    "            distance_angle_diff_pairs[coord_index] = {\"distances\": distances, \"angle_diffs\": angle_diffs}\n",
-    "            # reset current length to start counting up again\n",
-    "            current_length = 0\n",
-    "            distances = []\n",
-    "            angle_diffs = []\n",
-    "            # plot point on spline to mark it\n",
-    "            ax.scatter(coord[1], coord[0], c=\"green\")\n",
-    "            group_count += 1\n",
-    "            # if group_count == 3:\n",
-    "            #     break\n",
-    "        else:\n",
-    "            distances.append(current_length)\n",
-    "            angle_diffs.append(angle_diff)\n",
-    "\n",
-    "    ax.set_aspect(\"equal\")\n",
-    "    plt.show()\n",
-    "\n",
-    "    print(distance_angle_diff_pairs.keys())\n",
-    "\n",
-    "    # distances_156, angle_diffs_156 = distance_angle_diff_pairs[156][\"distances\"], distance_angle_diff_pairs[156][\"angle_diffs\"]\n",
-    "    # print(f\"distances: {distances_156}\")\n",
-    "    # print(f\"angle diffs: {angle_diffs_156}\")\n",
-    "    # cos_angle_diffs_156 = np.cos(angle_diffs_156)\n",
-    "    # print(f\"cos angle diffs: {cos_angle_diffs_156}\")\n",
-    "\n",
-    "    # plot angle difference as a function of distance\n",
-    "    fig, ax = plt.subplots()\n",
-    "    for coord_index, distance_angle_diffs_result in distance_angle_diff_pairs.items():\n",
-    "        angle_diffs = distance_angle_diffs_result[\"angle_diffs\"]\n",
-    "        angle_diffs = np.cos(angle_diffs)\n",
-    "        angle_diffs = -np.log(angle_diffs)\n",
-    "        distances = distance_angle_diffs_result[\"distances\"]\n",
-    "        ax.plot(distances, angle_diffs, label=f\"point {coord_index}\")\n",
-    "    ax.legend()\n",
-    "    plt.show()\n",
-    "\n",
-    "    # create an average of the angle differences despite not having the same lengths\n",
-    "    # calculate the average of the angle differences\n",
-    "    average_angle_diffs = []\n",
-    "    for coord_index, distance_angle_diffs_result in distance_angle_diff_pairs.items():\n",
-    "        angle_diffs = distance_angle_diffs_result[\"angle_diffs\"]\n",
-    "        angle_diffs = np.cos(angle_diffs)\n",
-    "        angle_diffs = -np.log(angle_diffs)\n",
-    "        distances = distance_angle_diffs_result[\"distances\"]\n",
-    "        # interpolate the angle differences to a common distance\n",
-    "        interpolated_angle_diffs = np.interp(np.arange(0, maximum_length_nm, 0.1), distances, angle_diffs)\n",
-    "        average_angle_diffs.append(interpolated_angle_diffs)\n",
-    "    average_angle_diffs = np.mean(average_angle_diffs, axis=0)\n",
-    "    fig, ax = plt.subplots()\n",
-    "    ax.plot(np.arange(0, maximum_length_nm, 0.1), average_angle_diffs)\n",
-    "    plt.show()\n",
-    "\n",
-    "    # fit a line to the average angle differences\n",
-    "    from scipy.optimize import curve_fit\n",
-    "\n",
-    "    def linear(x, a, b):\n",
-    "        return a * x + b\n",
-    "\n",
-    "    popt, pcov = curve_fit(linear, np.arange(0, maximum_length_nm, 0.1), average_angle_diffs)\n",
-    "    print(f\"popt: {popt} = 1/2p. p = {1/(2*popt[0])}\")\n",
-    "    fig, ax = plt.subplots()\n",
-    "    ax.plot(np.arange(0, maximum_length_nm, 0.1), linear(np.arange(0, maximum_length_nm, 0.1), *popt))\n",
-    "    ax.plot(np.arange(0, maximum_length_nm, 0.1), average_angle_diffs)\n",
-    "    plt.show()\n",
-    "\n",
-    "\n",
-    "mypleng(custom_coords, 10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "vector1 = np.array([1, 0], dtype=float)\n",
     "vector2 = np.array([-1, 1], dtype=float)\n",
     "# normalise\n",
@@ -233,13 +122,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def eucledian_dist(pleng, s):\n",
-    "    return 4 * pleng * s * (1 - (2 * pleng / s)) * (1 - np.exp(-s / (2 * pleng)))\n",
+    "def eucledian_dist(x, pleng):\n",
+    "    return 4 * pleng * x * (1 - (2 * pleng / x)) * (1 - np.exp(-x / (2 * pleng)))\n",
     "\n",
     "\n",
     "def betterpleng(points: np.ndarray, maximum_length_nm: float, plot=False) -> tuple[float, float]:\n",
     "    if plot:\n",
-    "        fig, ax = plt.subplots(figsize=(5, 5))\n",
+    "        fig, ax = plt.subplots(figsize=(10, 10))\n",
     "        ax.plot(points[:, 1], points[:, 0], c=\"red\")\n",
     "        ax.scatter(points[0, 1], points[0, 0], c=\"blue\")\n",
     "\n",
@@ -255,23 +144,25 @@
     "    first_point = points[0]\n",
     "    first_vector /= np.linalg.norm(first_vector)\n",
     "    for point_index, point in enumerate(points):\n",
-    "        if point_index <= 2:\n",
-    "            if point_index != 0:\n",
-    "                current_distance += np.linalg.norm(point - points[point_index - 1])\n",
+    "        if point_index == 0:\n",
+    "            # Skip the first point completely since we can't calculate a vector yet.\n",
+    "            # Don't even add the distance to the dictionary\n",
     "            continue\n",
     "        if point_index == len(points) - 1:\n",
     "            # don't include the last set of points since they're not complete\n",
     "            break\n",
     "        vector = point - points[point_index - 1]\n",
     "        vector_distance = np.linalg.norm(vector)\n",
+    "        current_distance += vector_distance\n",
     "        vector /= vector_distance\n",
     "        cos_angle = np.dot(first_vector, vector)\n",
     "        euclidean_distance_to_first_vector = np.linalg.norm(point - first_point)\n",
+    "        # Check for bad angles (for cos(angle))\n",
     "        if cos_angle == 0:\n",
     "            print(\"[warning] cos(angle) is orthogonal to first vector, can't be fitted to log plot\")\n",
     "        elif cos_angle < 0:\n",
     "            print(\"[warning] cos(angle) is negative, can't be fitted to log plot\")\n",
-    "        current_distance += vector_distance\n",
+    "\n",
     "        if current_distance > maximum_length_nm:\n",
     "            # reset this section and add stats to dictionary\n",
     "            first_vector = vector\n",
@@ -315,6 +206,7 @@
     "    # calculate the average of the cos angles, but since they are all at different distances, resample to use common\n",
     "    # distances, we need to ditch any points that are outside the smallest range of distances\n",
     "    average_cos_angles = []\n",
+    "    average_euclidean_distances = []\n",
     "    # find the smallest range of distances\n",
     "    largest_minimum = -np.inf\n",
     "    smallest_maximum = np.inf\n",
@@ -337,6 +229,7 @@
     "        interpolated_cos_angles = np.interp(common_distances, distances, cos_angles)\n",
     "        interpolated_euclidean_distances = np.interp(common_distances, distances, euclidean_distances)\n",
     "        average_cos_angles.append(interpolated_cos_angles)\n",
+    "        average_euclidean_distances.append(interpolated_euclidean_distances)\n",
     "        if plot:\n",
     "            ax.plot(common_distances, interpolated_cos_angles, label=f\"point {point_index}\")\n",
     "\n",
@@ -345,6 +238,7 @@
     "        plt.show()\n",
     "\n",
     "    average_cos_angles = np.mean(average_cos_angles, axis=0)\n",
+    "    average_euclidean_distances = np.mean(average_euclidean_distances, axis=0)\n",
     "\n",
     "    if plot:\n",
     "        fig, ax = plt.subplots()\n",
@@ -377,12 +271,11 @@
     "    pleng = 1 / (2 * popt[0])\n",
     "    print(f\"pleng: {pleng}\")\n",
     "\n",
-    "    # what is a good way to measure confidence in the fit?\n",
-    "    # one way is to calculate the residuals of the fit\n",
+    "    # calculate residuals\n",
     "    residuals = inverse_log_cos_angles - linear(common_distances, *popt)\n",
     "    if plot:\n",
     "        fig, ax = plt.subplots()\n",
-    "        ax.plot(common_distances, residuals)\n",
+    "        ax.scatter(x=common_distances, y=residuals)\n",
     "        plt.title(\"residuals\")\n",
     "        plt.show()\n",
     "\n",
@@ -392,39 +285,42 @@
     "\n",
     "    # calculate pleng using euclidean distances\n",
     "\n",
-    "    # plot the distances and euclidean distances\n",
     "    if plot:\n",
     "        fig, ax = plt.subplots()\n",
-    "    for point_index, distance_cos_angle_pair in distance_cos_angle_pairs.items():\n",
-    "        distances = distance_cos_angle_pair[\"distances\"]\n",
-    "        euclidean_distances = distance_cos_angle_pair[\"euclidean_distances\"]\n",
-    "        if plot:\n",
+    "        for point_index, distance_cos_angle_pair in distance_cos_angle_pairs.items():\n",
+    "            distances = distance_cos_angle_pair[\"distances\"]\n",
+    "            euclidean_distances = distance_cos_angle_pair[\"euclidean_distances\"]\n",
     "            ax.plot(distances, euclidean_distances, label=f\"point {point_index}\")\n",
-    "    if plot:\n",
     "        ax.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5), ncol=len(distance_cos_angle_pairs) // 4)\n",
+    "        ax.set_title(\"euclidean distances\")\n",
     "        plt.show()\n",
     "\n",
-    "    # calculate average euclidean distances\n",
-    "    average_euclidean_distances = []\n",
-    "    for point_index, distance_cos_angle_pair in distance_cos_angle_pairs.items():\n",
-    "        euclidean_distances = distance_cos_angle_pair[\"euclidean_distances\"]\n",
-    "        distances = distance_cos_angle_pair[\"distances\"]\n",
-    "        interpolated_euclidean_distances = np.interp(\n",
-    "            np.arange(0, maximum_length_nm, 0.1), distances, euclidean_distances\n",
-    "        )\n",
-    "        average_euclidean_distances.append(interpolated_euclidean_distances)\n",
-    "    average_euclidean_distances = np.mean(average_euclidean_distances, axis=0)\n",
-    "\n",
     "    if plot:\n",
+    "        # plot average euclidean distances\n",
     "        fig, ax = plt.subplots()\n",
-    "        ax.plot(np.arange(0, maximum_length_nm, 0.1), average_euclidean_distances)\n",
+    "        ax.plot(common_distances, average_euclidean_distances)\n",
     "        plt.title(\"average euclidean distances\")\n",
     "        plt.show()\n",
+    "\n",
+    "    # here we know the result, that's the average_euclidean_distances, and we know x, that's the common_distances\n",
+    "    # we are trying to find pleng\n",
+    "    popt, pcov = curve_fit(f=eucledian_dist, xdata=common_distances, ydata=average_euclidean_distances)\n",
+    "\n",
+    "    if plot:\n",
+    "        fig, ax = plt.subplots()\n",
+    "        ax.plot(common_distances, eucledian_dist(common_distances, *popt), label=\"fit\")\n",
+    "        ax.plot(common_distances, average_euclidean_distances, label=\"data\")\n",
+    "        plt.title(\"fit\")\n",
+    "        plt.legend()\n",
+    "        plt.show()\n",
+    "\n",
+    "    euclidian_pleng = popt[0]\n",
+    "    print(f\"euclidean pleng: {euclidian_pleng}\")\n",
     "\n",
     "    return pleng, rmse\n",
     "\n",
     "\n",
-    "betterpleng(spline_coords, maximum_length_nm=7, plot=True)"
+    "betterpleng(spline_coords, maximum_length_nm=20, plot=True)"
    ]
   },
   {
@@ -460,12 +356,31 @@
     "s_values = np.linspace(0.1, 1, 100)\n",
     "rsquared_values = np.zeros((len(p_values), len(s_values)))\n",
     "for p_index, pleng in enumerate(p_values):\n",
-    "    for s_index, s in enumerate(s_values):\n",
-    "        rsquared_values[p_index, s_index] = eucledian_dist(pleng, s)\n",
+    "    for s_index, x in enumerate(s_values):\n",
+    "        rsquared_values[p_index, s_index] = eucledian_dist(pleng, x)\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "cax = ax.matshow(rsquared_values, cmap=\"viridis\")\n",
     "fig.colorbar(cax)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pleng = 50\n",
+    "contour_lengths = np.linspace(10, 150, 100)\n",
+    "euclidian_distances = np.zeros_like(contour_lengths)\n",
+    "for index, contour_length in enumerate(contour_lengths):\n",
+    "    euclidian_distances[index] = eucledian_dist(x=contour_length, pleng=pleng)\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.plot(contour_lengths, euclidian_distances)\n",
+    "plt.xlabel(\"contour length\")\n",
+    "plt.ylabel(\"euclidean distance\")\n",
     "plt.show()"
    ]
   }
