--- a/pleng.ipynb
+++ b/pleng.ipynb
@@ -57,71 +57,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "custom_coords = np.array(\n",
-    "    [\n",
-    "        [50, 50],\n",
-    "        [50, 60],\n",
-    "        [60, 70],\n",
-    "        [70, 60],\n",
-    "        [70, 50],\n",
-    "        [70, 40],\n",
-    "        [70, 30],\n",
-    "        [60, 20],\n",
-    "        [50, 30],\n",
-    "        [50, 40],\n",
-    "    ]\n",
-    ")\n",
-    "fig, ax = plt.subplots(figsize=(5, 5))\n",
-    "ax.plot(custom_coords[:, 0], custom_coords[:, 1], \"o\", color=\"red\")\n",
-    "ax.set_xlim(0, 100)\n",
-    "ax.set_ylim(0, 100)\n",
-    "plt.show()\n",
-    "\n",
-    "# interpolate the data\n",
-    "from scipy.interpolate import splprep, splev\n",
-    "\n",
-    "tck, u = splprep(custom_coords.T, s=0, per=True)\n",
-    "custom_coords = splev(np.linspace(0, 1, 100), tck)\n",
-    "fig, ax = plt.subplots(figsize=(5, 5))\n",
-    "ax.plot(custom_coords[0], custom_coords[1], \"-\", color=\"red\")\n",
-    "ax.set_xlim(0, 100)\n",
-    "ax.set_ylim(0, 100)\n",
-    "plt.show()\n",
-    "\n",
-    "custom_coords = np.array(custom_coords).T\n",
-    "print(custom_coords.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vector1 = np.array([1, 0], dtype=float)\n",
-    "vector2 = np.array([-1, 1], dtype=float)\n",
-    "# normalise\n",
-    "vector1 /= np.linalg.norm(vector1)\n",
-    "vector2 /= np.linalg.norm(vector2)\n",
-    "\n",
-    "dotproduct = np.dot(vector1, vector2)\n",
-    "# the dot product of two vectors is equal to the cos(angle) between the vectors\n",
-    "\n",
-    "fig, ax = plt.subplots(figsize=(5, 5))\n",
-    "ax.plot([0, vector1[1]], [0, vector1[0]], c=\"red\")\n",
-    "ax.plot([0, vector2[1]], [0, vector2[0]], c=\"blue\")\n",
-    "ax.set_title(f\"dot product: {dotproduct}\")\n",
-    "ax.set_xlim(-1, 1)\n",
-    "ax.set_ylim(-1, 1)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def eucledian_dist(x, pleng):\n",
     "    return 4 * pleng * x * (1 - (2 * pleng / x)) * (1 - np.exp(-x / (2 * pleng)))\n",
     "\n",
@@ -283,44 +218,17 @@
     "    rmse = np.sqrt(np.mean(residuals**2))\n",
     "    print(f\"rmse: {rmse}\")\n",
     "\n",
-    "    # calculate pleng using euclidean distances\n",
-    "\n",
-    "    if plot:\n",
-    "        fig, ax = plt.subplots()\n",
-    "        for point_index, distance_cos_angle_pair in distance_cos_angle_pairs.items():\n",
-    "            distances = distance_cos_angle_pair[\"distances\"]\n",
-    "            euclidean_distances = distance_cos_angle_pair[\"euclidean_distances\"]\n",
-    "            ax.plot(distances, euclidean_distances, label=f\"point {point_index}\")\n",
-    "        ax.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5), ncol=len(distance_cos_angle_pairs) // 4)\n",
-    "        ax.set_title(\"euclidean distances\")\n",
-    "        plt.show()\n",
-    "\n",
-    "    if plot:\n",
-    "        # plot average euclidean distances\n",
-    "        fig, ax = plt.subplots()\n",
-    "        ax.plot(common_distances, average_euclidean_distances)\n",
-    "        plt.title(\"average euclidean distances\")\n",
-    "        plt.show()\n",
-    "\n",
-    "    # here we know the result, that's the average_euclidean_distances, and we know x, that's the common_distances\n",
-    "    # we are trying to find pleng\n",
-    "    popt, pcov = curve_fit(f=eucledian_dist, xdata=common_distances, ydata=average_euclidean_distances)\n",
-    "\n",
-    "    if plot:\n",
-    "        fig, ax = plt.subplots()\n",
-    "        ax.plot(common_distances, eucledian_dist(common_distances, *popt), label=\"fit\")\n",
-    "        ax.plot(common_distances, average_euclidean_distances, label=\"data\")\n",
-    "        plt.title(\"fit\")\n",
-    "        plt.legend()\n",
-    "        plt.show()\n",
-    "\n",
-    "    euclidian_pleng = popt[0]\n",
-    "    print(f\"euclidean pleng: {euclidian_pleng}\")\n",
-    "\n",
     "    return pleng, rmse\n",
     "\n",
     "\n",
     "betterpleng(spline_coords, maximum_length_nm=20, plot=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get lowest"
    ]
   },
   {
