Run pleng on lots of samples

--- a/pleng.ipynb
+++ b/pleng.ipynb
@@ -24,7 +24,15 @@
    "outputs": [],
    "source": [
     "data_dir = Path(\"/Users/sylvi/topo_data/pleng/data/\")\n",
-    "assert data_dir.exists()\n",
+    "assert data_dir.exists()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "filename = \"20231218_2ngSCcats.0_00003.topostats\"\n",
     "file_path = data_dir / filename\n",
     "assert file_path.exists()\n",
@@ -61,7 +69,9 @@
     "    return 4 * pleng * x * (1 - (2 * pleng / x)) * (1 - np.exp(-x / (2 * pleng)))\n",
     "\n",
     "\n",
-    "def betterpleng(points: np.ndarray, maximum_length_nm: float, plot=False) -> tuple[float, float]:\n",
+    "def betterpleng(\n",
+    "    points: np.ndarray, maximum_length_nm: float, plot=False, log_angle_warnings=True\n",
+    ") -> tuple[float, float]:\n",
     "    if plot:\n",
     "        fig, ax = plt.subplots(figsize=(10, 10))\n",
     "        ax.plot(points[:, 1], points[:, 0], c=\"red\")\n",
@@ -72,7 +82,6 @@
     "    distance_cos_angle_pairs = {}\n",
     "    distances = []\n",
     "    cos_angles = []\n",
-    "    euclidean_distances = []\n",
     "\n",
     "    # iterate over each point\n",
     "    first_vector = points[1] - points[0]\n",
@@ -91,12 +100,12 @@
     "        current_distance += vector_distance\n",
     "        vector /= vector_distance\n",
     "        cos_angle = np.dot(first_vector, vector)\n",
-    "        euclidean_distance_to_first_vector = np.linalg.norm(point - first_point)\n",
     "        # Check for bad angles (for cos(angle))\n",
-    "        if cos_angle == 0:\n",
-    "            print(\"[warning] cos(angle) is orthogonal to first vector, can't be fitted to log plot\")\n",
-    "        elif cos_angle < 0:\n",
-    "            print(\"[warning] cos(angle) is negative, can't be fitted to log plot\")\n",
+    "        if log_angle_warnings:\n",
+    "            if cos_angle == 0:\n",
+    "                print(\"[warning] cos(angle) is orthogonal to first vector, can't be fitted to log plot\")\n",
+    "            elif cos_angle < 0:\n",
+    "                print(\"[warning] cos(angle) is negative, can't be fitted to log plot\")\n",
     "\n",
     "        if current_distance > maximum_length_nm:\n",
     "            # reset this section and add stats to dictionary\n",
@@ -107,11 +116,9 @@
     "            distance_cos_angle_pairs[point_index] = {\n",
     "                \"distances\": distances,\n",
     "                \"cos_angles\": cos_angles,\n",
-    "                \"euclidean_distances\": euclidean_distances,\n",
     "            }\n",
     "            distances = []\n",
     "            cos_angles = []\n",
-    "            euclidean_distances = []\n",
     "            if plot:\n",
     "                ax.scatter(point[1], point[0], c=\"green\")\n",
     "        else:\n",
@@ -119,7 +126,6 @@
     "                ax.scatter(point[1], point[0], c=\"blue\", s=1)\n",
     "            distances.append(current_distance)\n",
     "            cos_angles.append(cos_angle)\n",
-    "            euclidean_distances.append(euclidean_distance_to_first_vector)\n",
     "\n",
     "    if plot:\n",
     "        ax.set_aspect(\"equal\")\n",
@@ -138,13 +144,25 @@
     "        ax.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5), ncol=len(distance_cos_angle_pairs) // 4)\n",
     "        plt.show()\n",
     "\n",
+    "    # get rid of distance cos angle pairs where cos angles are zero or negative, since they can't be fitted\n",
+    "    # to a log plot\n",
+    "    vetted_distance_cos_angle_pairs = {}\n",
+    "    for point_index, distance_cos_angle_pair in distance_cos_angle_pairs.items():\n",
+    "        cos_angles = distance_cos_angle_pair[\"cos_angles\"]\n",
+    "        if np.any(np.array(cos_angles) <= 0):\n",
+    "            continue\n",
+    "        vetted_distance_cos_angle_pairs[point_index] = distance_cos_angle_pair\n",
+    "\n",
+    "    distance_cos_angle_pairs = vetted_distance_cos_angle_pairs\n",
+    "\n",
     "    # calculate the average of the cos angles, but since they are all at different distances, resample to use common\n",
     "    # distances, we need to ditch any points that are outside the smallest range of distances\n",
     "    average_cos_angles = []\n",
-    "    average_euclidean_distances = []\n",
     "    # find the smallest range of distances\n",
     "    largest_minimum = -np.inf\n",
     "    smallest_maximum = np.inf\n",
+    "    if len(distance_cos_angle_pairs) == 0:\n",
+    "        raise ValueError(\"no points found\")\n",
     "    for point_index, distance_cos_angle_pair in distance_cos_angle_pairs.items():\n",
     "        distances = distance_cos_angle_pair[\"distances\"]\n",
     "        smallest_distance = np.min(distances)\n",
@@ -153,6 +171,8 @@
     "            largest_minimum = smallest_distance\n",
     "        if largest_distance < smallest_maximum:\n",
     "            smallest_maximum = largest_distance\n",
+    "    if largest_minimum == -np.inf or smallest_maximum == np.inf:\n",
+    "        raise ValueError(\"no common range of distances found\")\n",
     "    common_distances = np.arange(largest_minimum, smallest_maximum, 0.1)\n",
     "    # resample each set of distances and cos angles to the common distances\n",
     "    if plot:\n",
@@ -160,11 +180,8 @@
     "    for point_index, distance_cos_angle_pair in distance_cos_angle_pairs.items():\n",
     "        distances = distance_cos_angle_pair[\"distances\"]\n",
     "        cos_angles = distance_cos_angle_pair[\"cos_angles\"]\n",
-    "        euclidean_distances = distance_cos_angle_pair[\"euclidean_distances\"]\n",
     "        interpolated_cos_angles = np.interp(common_distances, distances, cos_angles)\n",
-    "        interpolated_euclidean_distances = np.interp(common_distances, distances, euclidean_distances)\n",
     "        average_cos_angles.append(interpolated_cos_angles)\n",
-    "        average_euclidean_distances.append(interpolated_euclidean_distances)\n",
     "        if plot:\n",
     "            ax.plot(common_distances, interpolated_cos_angles, label=f\"point {point_index}\")\n",
     "\n",
@@ -173,7 +190,6 @@
     "        plt.show()\n",
     "\n",
     "    average_cos_angles = np.mean(average_cos_angles, axis=0)\n",
-    "    average_euclidean_distances = np.mean(average_euclidean_distances, axis=0)\n",
     "\n",
     "    if plot:\n",
     "        fig, ax = plt.subplots()\n",
@@ -204,7 +220,6 @@
     "\n",
     "    # the slope is 1/(2p) where p is the pleng\n",
     "    pleng = 1 / (2 * popt[0])\n",
-    "    print(f\"pleng: {pleng}\")\n",
     "\n",
     "    # calculate residuals\n",
     "    residuals = inverse_log_cos_angles - linear(common_distances, *popt)\n",
@@ -213,15 +228,17 @@
     "        ax.scatter(x=common_distances, y=residuals)\n",
     "        plt.title(\"residuals\")\n",
     "        plt.show()\n",
+    "        print(f\"pleng: {pleng}\")\n",
     "\n",
     "    # calculate root mean squared error\n",
     "    rmse = np.sqrt(np.mean(residuals**2))\n",
-    "    print(f\"rmse: {rmse}\")\n",
+    "    if plot:\n",
+    "        print(f\"rmse: {rmse}\")\n",
     "\n",
     "    return pleng, rmse\n",
     "\n",
     "\n",
-    "betterpleng(spline_coords, maximum_length_nm=20, plot=True)"
+    "betterpleng(spline_coords, maximum_length_nm=10, plot=True)"
    ]
   },
   {
@@ -290,6 +307,74 @@
     "plt.xlabel(\"contour length\")\n",
     "plt.ylabel(\"euclidean distance\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_type = \"magnesium\"\n",
+    "data_dir = Path(f\"/Users/sylvi/topo_data/pleng/topology-data-check/processed-data-{sample_type}\")\n",
+    "maximum_length_nm = 40\n",
+    "num_molecules_processed = 0\n",
+    "use_grains_with_only_one_molecule = True\n",
+    "assert data_dir.exists()\n",
+    "\n",
+    "plengs, rmses = [], []\n",
+    "\n",
+    "# get all .topostats files\n",
+    "topostats_files = list(data_dir.glob(\"*.topostats\"))\n",
+    "print(f\"Found {len(topostats_files)} .topostats files\")\n",
+    "for file in topostats_files:\n",
+    "    print(f\"file: {file.name}\")\n",
+    "    with h5py.File(file, \"r\") as f:\n",
+    "        image_data = hdf5_to_dict(f, group_path=\"/\")\n",
+    "        if \"splining\" not in image_data:\n",
+    "            print(\"[ERROR] no splining data\")\n",
+    "            continue\n",
+    "        spline_data = image_data[\"splining\"][\"above\"]\n",
+    "        p_to_nm = image_data[\"pixel_to_nm_scaling\"]\n",
+    "\n",
+    "        for grain_index, grain_data in spline_data.items():\n",
+    "            print(f\"  grain: {grain_index}\")\n",
+    "            print(f\"  number of molecules: {len(grain_data)}\")\n",
+    "            if use_grains_with_only_one_molecule and len(grain_data) != 1:\n",
+    "                print(f\"    skipping grain with {len(grain_data)} molecules\")\n",
+    "                continue\n",
+    "            for molecule_index, molecule_data in grain_data.items():\n",
+    "                print(f\"    molecule: {molecule_index}\")\n",
+    "                spline_coords = molecule_data[\"spline_coords\"]\n",
+    "                try:\n",
+    "                    pleng, rmse = betterpleng(\n",
+    "                        points=spline_coords, maximum_length_nm=maximum_length_nm, plot=False, log_angle_warnings=False\n",
+    "                    )\n",
+    "                    plengs.append(pleng)\n",
+    "                    rmses.append(rmse)\n",
+    "                except ValueError as e:\n",
+    "                    if \"no points found\" in str(e):\n",
+    "                        print(\"[ERROR] no points found\")\n",
+    "                        continue\n",
+    "                    elif \"no common range of distances found\" in str(e):\n",
+    "                        print(\"[ERROR] no common range of distances found\")\n",
+    "                        continue\n",
+    "                    else:\n",
+    "                        raise e\n",
+    "                num_molecules_processed += 1\n",
+    "print(f\"processed {num_molecules_processed} molecules\")\n",
+    "\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(5, 5))\n",
+    "ax.scatter(x=plengs, y=rmses, s=1)\n",
+    "plt.xlabel(\"pleng\")\n",
+    "plt.ylabel(\"rmse\")\n",
+    "plt.title(f\"pleng vs rmse for {sample_type}, n={num_molecules_processed} L={maximum_length_nm}\")\n",
+    "plt.show()\n",
+    "\n",
+    "# calculate a weighted average, inversely proportional to the rmse\n",
+    "weighted_average = np.average(plengs, weights=1 / np.array(rmses))\n",
+    "print(f\"weighted average: {weighted_average}\")"
    ]
   }
  ],
