style(isort): Applying nbqa-isort to Notebooks

--- a/notebooks/OUTDATED-00-Walkthrough-minicircle.ipynb
+++ b/notebooks/OUTDATED-00-Walkthrough-minicircle.ipynb
@@ -58,15 +58,15 @@
     "import json\n",
     "from pathlib import Path\n",
     "\n",
-    "from ipywidgets import FileUpload\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "from ipywidgets import FileUpload\n",
     "\n",
     "from topostats.filters import Filters\n",
     "from topostats.grains import Grains\n",
     "from topostats.grainstats import GrainStats\n",
-    "from topostats.io import find_files, read_yaml, write_yaml, LoadScans\n",
-    "from topostats.logs.logs import setup_logger, LOGGER_NAME\n",
+    "from topostats.io import LoadScans, find_files, read_yaml, write_yaml\n",
+    "from topostats.logs.logs import LOGGER_NAME, setup_logger\n",
     "from topostats.plottingfuncs import Images\n",
     "from topostats.tracing.dnatracing import trace_image\n",
     "from topostats.utils import update_config"
