style(pylint): Apply some linting from pylint
Applied some of the linting rules that `pylint` reported but not all, the environment used doesn't have TopoStats
installed and so fails (just as `pylint` would fail in `pre-commit.ci` and is therefore configured as `local` only).

Have opted to remove `nbqa-pylint` hook but have removed unused imports from Notebooks.

--- a/notebooks/OUTDATED-03-Plotting-scans.ipynb
+++ b/notebooks/OUTDATED-03-Plotting-scans.ipynb
@@ -54,7 +54,6 @@
     "\n",
     "import matplotlib.colors as mcolors\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
     "from ipywidgets import widgets\n",
     "\n",
     "from topostats.io import load_array\n",
@@ -545,21 +544,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "argv": [
-    "python",
-    "-m",
-    "ipykernel_launcher",
-    "-f",
-    "{connection_file}"
-   ],
    "display_name": "Python 3 (ipykernel)",
-   "env": null,
-   "interrupt_mode": "signal",
    "language": "python",
-   "metadata": {
-    "debugger": true
-   },
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   },
   "name": "03-Plotting-scans.ipynb"
  },
