--- a/notebooks/OUTDATED-00-Walkthrough-minicircle.ipynb
+++ b/notebooks/OUTDATED-00-Walkthrough-minicircle.ipynb
@@ -59,14 +59,11 @@
     "from pathlib import Path\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "from ipywidgets import FileUpload\n",
     "\n",
     "from topostats.filters import Filters\n",
     "from topostats.grains import Grains\n",
     "from topostats.grainstats import GrainStats\n",
-    "from topostats.io import LoadScans, find_files, read_yaml, write_yaml\n",
-    "from topostats.logs.logs import LOGGER_NAME, setup_logger\n",
+    "from topostats.io import LoadScans, find_files, read_yaml\n",
     "from topostats.plottingfuncs import Images\n",
     "from topostats.tracing.dnatracing import trace_image\n",
     "from topostats.utils import update_config"
@@ -870,7 +867,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "new",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -884,7 +881,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.9"
   },
   "name": "00-Walkthrough-minicircle.ipynb"
  },
