style(flake8): Addresses (most) errors reported by nbqa-flake8
Sets `max-line-length` to 120 for `flake8` via `tox.ini` and addresses most other errors reported by `flake8`. The
exception is a single equality condition used to subset a Pandas Dataframe.

--- a/notebooks/OUTDATED-00-Walkthrough-minicircle.ipynb
+++ b/notebooks/OUTDATED-00-Walkthrough-minicircle.ipynb
@@ -65,8 +65,7 @@
     "from topostats.grainstats import GrainStats\n",
     "from topostats.io import LoadScans, find_files, read_yaml\n",
     "from topostats.plottingfuncs import Images\n",
-    "from topostats.tracing.dnatracing import trace_image\n",
-    "from topostats.utils import update_config"
+    "from topostats.tracing.dnatracing import trace_image"
    ]
   },
   {
@@ -224,8 +223,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from topostats.io import read_yaml\n",
-    "\n",
     "config = read_yaml(BASE_DIR.parent / \"topostats\" / \"default_config.yaml\")\n",
     "print(f\"Top level keys of config.yaml : \\n\\n {config.keys()}\\n\")\n",
     "print(f\"Configuration options for Filter : \\n\\n {config['filter'].keys()}\")"
@@ -351,8 +348,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from topostats.filters import Filters\n",
-    "\n",
     "filtered_image = Filters(\n",
     "    image=all_scan_data.img_dict[\"minicircle\"][\"image_original\"],\n",
     "    filename=all_scan_data.img_dict[\"minicircle\"][\"img_path\"],\n",
@@ -470,7 +465,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## TODO - Not getting fig, ax returned by plot_and_save()?\n",
     "# First remove the current value for cmap in the plotting_config dictionary, otherwise an error occurs because the same\n",
     "# argument will have been specified twice.\n",
     "current_cmap = plotting_config.pop(\"cmap\")\n",
@@ -577,7 +571,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## TODO - Not getting fig, ax returned by plot_and_save()?\n",
     "plotting_config[\"colorbar\"] = False\n",
     "fig, ax = Images(\n",
     "    data=grains.directions[\"above\"][\"coloured_regions\"],\n",
@@ -626,7 +619,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## ToDO - What are sensible values for minicircle here?\n",
     "grain_config[\"threshold_method\"] = \"absolute\"\n",
     "grain_config[\"direction\"] = \"above\"\n",
     "grain_config[\"threshold_absolute\"][\"above\"] = 0.01  # Change just the above threshold\n",
