--- a/notebooks/OUTDATED-02-Summary-statistics-and-plots.ipynb
+++ b/notebooks/OUTDATED-02-Summary-statistics-and-plots.ipynb
@@ -53,10 +53,9 @@
    "source": [
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
-    "import seaborn as sns\n",
-    "\n",
-    "from topostats.plotting import TopoSum"
+    "import seaborn as sns"
    ]
   },
   {
@@ -297,8 +296,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
     "min = df_three_images[\"contour_length\"].min()\n",
     "max = df_three_images[\"contour_length\"].max()\n",
     "bins = 20\n",
@@ -416,7 +413,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.9"
   },
   "name": "02-Summary-statistics-and-plots.ipynb"
  },
