Add lots of stuff, multi file pleng, comparisons, improved method etc

--- a/pleng.ipynb
+++ b/pleng.ipynb
@@ -10,6 +10,7 @@
     "import h5py\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "import seaborn as sns\n",
     "\n",
     "from scipy.optimize import curve_fit\n",
     "\n",
@@ -70,7 +71,7 @@
     "\n",
     "\n",
     "def betterpleng(\n",
-    "    points: np.ndarray, maximum_length_nm: float, plot=False, log_angle_warnings=True\n",
+    "    points: np.ndarray, maximum_length_nm: float, plot=False, log_angle_warnings=True, log_details=False\n",
     ") -> tuple[float, float]:\n",
     "    if plot:\n",
     "        fig, ax = plt.subplots(figsize=(10, 10))\n",
@@ -174,6 +175,8 @@
     "    if largest_minimum == -np.inf or smallest_maximum == np.inf:\n",
     "        raise ValueError(\"no common range of distances found\")\n",
     "    common_distances = np.arange(largest_minimum, smallest_maximum, 0.1)\n",
+    "    if log_details:\n",
+    "        print(f\"common distances shape: {common_distances.shape}\")\n",
     "    # resample each set of distances and cos angles to the common distances\n",
     "    if plot:\n",
     "        fig, ax = plt.subplots(figsize=(5, 5))\n",
@@ -208,6 +211,10 @@
     "    def linear(x, a, b):\n",
     "        return a * x + b\n",
     "\n",
+    "    if log_details:\n",
+    "        print(f\"common distances shape: {common_distances.shape}\")\n",
+    "        print(f\"inverse log cos angles shape: {inverse_log_cos_angles.shape}\")\n",
+    "\n",
     "    popt, pcov = curve_fit(linear, common_distances, inverse_log_cos_angles)\n",
     "\n",
     "    if plot:\n",
@@ -238,7 +245,7 @@
     "    return pleng, rmse\n",
     "\n",
     "\n",
-    "betterpleng(spline_coords, maximum_length_nm=10, plot=True)"
+    "betterpleng(spline_coords, maximum_length_nm=10, plot=True, log_details=True)"
    ]
   },
   {
@@ -315,58 +322,102 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_type = \"magnesium\"\n",
+    "# create results dictionary\n",
+    "results = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def multi_file_pleng(\n",
+    "    data_dir: Path,\n",
+    "    maximum_length_nm: float,\n",
+    "    maximum_px_to_nm: float,\n",
+    "    use_grains_with_only_one_molecule: bool,\n",
+    "    quiet=True,\n",
+    ") -> tuple[list, list, list, int]:\n",
+    "\n",
+    "    def qprint(*args, **kwargs):\n",
+    "        if not quiet:\n",
+    "            print(*args, **kwargs)\n",
+    "\n",
+    "    num_molecules_processed = 0\n",
+    "\n",
+    "    plengs, rmses, p2nms = [], [], []\n",
+    "\n",
+    "    # get all .topostats files\n",
+    "    topostats_files = list(data_dir.glob(\"*.topostats\"))\n",
+    "    print(f\"Found {len(topostats_files)} .topostats files\")\n",
+    "    for file in topostats_files:\n",
+    "        qprint(f\"file: {file.name}\")\n",
+    "        with h5py.File(file, \"r\") as f:\n",
+    "            image_data = hdf5_to_dict(f, group_path=\"/\")\n",
+    "            if \"splining\" not in image_data:\n",
+    "                qprint(\"[ERROR] no splining data\")\n",
+    "                continue\n",
+    "            spline_data = image_data[\"splining\"][\"above\"]\n",
+    "            p_to_nm = image_data[\"pixel_to_nm_scaling\"]\n",
+    "\n",
+    "            if p_to_nm > maximum_px_to_nm:\n",
+    "                qprint(f\"skipping file, pixel to nm scaling is too high: {p_to_nm}\")\n",
+    "                continue\n",
+    "\n",
+    "            for grain_index, grain_data in spline_data.items():\n",
+    "                qprint(f\"  grain: {grain_index}\")\n",
+    "                qprint(f\"  number of molecules: {len(grain_data)}\")\n",
+    "                if use_grains_with_only_one_molecule and len(grain_data) != 1:\n",
+    "                    qprint(f\"    skipping grain with {len(grain_data)} molecules\")\n",
+    "                    continue\n",
+    "                for molecule_index, molecule_data in grain_data.items():\n",
+    "                    qprint(f\"    molecule: {molecule_index}\")\n",
+    "                    spline_coords = molecule_data[\"spline_coords\"] * p_to_nm\n",
+    "                    try:\n",
+    "                        pleng, rmse = betterpleng(\n",
+    "                            points=spline_coords,\n",
+    "                            maximum_length_nm=maximum_length_nm,\n",
+    "                            plot=False,\n",
+    "                            log_angle_warnings=False,\n",
+    "                        )\n",
+    "                        plengs.append(pleng)\n",
+    "                        rmses.append(rmse)\n",
+    "                        p2nms.append(p_to_nm)\n",
+    "                    except ValueError as e:\n",
+    "                        if \"no points found\" in str(e):\n",
+    "                            qprint(\"[ERROR] no points found\")\n",
+    "                            continue\n",
+    "                        elif \"no common range of distances found\" in str(e):\n",
+    "                            qprint(\"[ERROR] no common range of distances found\")\n",
+    "                            continue\n",
+    "                        else:\n",
+    "                            raise e\n",
+    "                    num_molecules_processed += 1\n",
+    "    print(f\"processed {num_molecules_processed} molecules\")\n",
+    "\n",
+    "    return plengs, rmses, p2nms, num_molecules_processed\n",
+    "\n",
+    "\n",
+    "sample_type = \"magnesium-unknot-plasmid-nicked\"\n",
     "data_dir = Path(f\"/Users/sylvi/topo_data/pleng/topology-data-check/processed-data-{sample_type}\")\n",
-    "maximum_length_nm = 40\n",
-    "num_molecules_processed = 0\n",
+    "maximum_length_nm = 10\n",
+    "maximum_px_to_nm = 1.0\n",
     "use_grains_with_only_one_molecule = True\n",
     "assert data_dir.exists()\n",
     "\n",
-    "plengs, rmses = [], []\n",
-    "\n",
-    "# get all .topostats files\n",
-    "topostats_files = list(data_dir.glob(\"*.topostats\"))\n",
-    "print(f\"Found {len(topostats_files)} .topostats files\")\n",
-    "for file in topostats_files:\n",
-    "    print(f\"file: {file.name}\")\n",
-    "    with h5py.File(file, \"r\") as f:\n",
-    "        image_data = hdf5_to_dict(f, group_path=\"/\")\n",
-    "        if \"splining\" not in image_data:\n",
-    "            print(\"[ERROR] no splining data\")\n",
-    "            continue\n",
-    "        spline_data = image_data[\"splining\"][\"above\"]\n",
-    "        p_to_nm = image_data[\"pixel_to_nm_scaling\"]\n",
-    "\n",
-    "        for grain_index, grain_data in spline_data.items():\n",
-    "            print(f\"  grain: {grain_index}\")\n",
-    "            print(f\"  number of molecules: {len(grain_data)}\")\n",
-    "            if use_grains_with_only_one_molecule and len(grain_data) != 1:\n",
-    "                print(f\"    skipping grain with {len(grain_data)} molecules\")\n",
-    "                continue\n",
-    "            for molecule_index, molecule_data in grain_data.items():\n",
-    "                print(f\"    molecule: {molecule_index}\")\n",
-    "                spline_coords = molecule_data[\"spline_coords\"]\n",
-    "                try:\n",
-    "                    pleng, rmse = betterpleng(\n",
-    "                        points=spline_coords, maximum_length_nm=maximum_length_nm, plot=False, log_angle_warnings=False\n",
-    "                    )\n",
-    "                    plengs.append(pleng)\n",
-    "                    rmses.append(rmse)\n",
-    "                except ValueError as e:\n",
-    "                    if \"no points found\" in str(e):\n",
-    "                        print(\"[ERROR] no points found\")\n",
-    "                        continue\n",
-    "                    elif \"no common range of distances found\" in str(e):\n",
-    "                        print(\"[ERROR] no common range of distances found\")\n",
-    "                        continue\n",
-    "                    else:\n",
-    "                        raise e\n",
-    "                num_molecules_processed += 1\n",
-    "print(f\"processed {num_molecules_processed} molecules\")\n",
-    "\n",
+    "plengs, rmses, p2nms, num_molecules_processed = multi_file_pleng(\n",
+    "    data_dir=data_dir,\n",
+    "    maximum_length_nm=maximum_length_nm,\n",
+    "    maximum_px_to_nm=maximum_px_to_nm,\n",
+    "    use_grains_with_only_one_molecule=use_grains_with_only_one_molecule,\n",
+    ")\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(5, 5))\n",
-    "ax.scatter(x=plengs, y=rmses, s=1)\n",
+    "p2nms = np.array(p2nms)\n",
+    "ax.scatter(x=plengs, y=rmses, s=4, c=p2nms, cmap=\"viridis\")\n",
+    "cbar = plt.colorbar(ax.collections[0], ax=ax)\n",
+    "\n",
     "plt.xlabel(\"pleng\")\n",
     "plt.ylabel(\"rmse\")\n",
     "plt.title(f\"pleng vs rmse for {sample_type}, n={num_molecules_processed} L={maximum_length_nm}\")\n",
@@ -374,7 +425,111 @@
     "\n",
     "# calculate a weighted average, inversely proportional to the rmse\n",
     "weighted_average = np.average(plengs, weights=1 / np.array(rmses))\n",
-    "print(f\"weighted average: {weighted_average}\")"
+    "print(f\"rmse weighted average: {weighted_average}\")\n",
+    "\n",
+    "non_weighted_average = np.mean(plengs)\n",
+    "print(f\"non weighted average: {non_weighted_average}\")\n",
+    "\n",
+    "results[sample_type] = {\n",
+    "    \"plengs\": plengs,\n",
+    "    \"rmses\": rmses,\n",
+    "    \"p2nms\": p2nms,\n",
+    "    \"weighted_average\": weighted_average,\n",
+    "    \"non_weighted_average\": non_weighted_average,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_types = [\n",
+    "    \"magnesium-unknot-plasmid-nicked\",\n",
+    "    \"magnesium-unknot-plasmid-supercoiled\",\n",
+    "    \"nickel-relaxed\",\n",
+    "    \"nickel-supercoiled\",\n",
+    "]\n",
+    "data_dir_prefix = \"/Users/sylvi/topo_data/pleng/topology-data-check/processed-data-\"\n",
+    "maximum_length_nm = 20\n",
+    "maximum_px_to_nm = 1.0\n",
+    "use_grains_with_only_one_molecule = True\n",
+    "assert data_dir.exists()\n",
+    "\n",
+    "results = {}\n",
+    "\n",
+    "for sample_type in sample_types:\n",
+    "    data_dir = Path(data_dir_prefix + sample_type)\n",
+    "    plengs, rmses, p2nms, num_molecules_processed = multi_file_pleng(\n",
+    "        data_dir=data_dir,\n",
+    "        maximum_length_nm=maximum_length_nm,\n",
+    "        maximum_px_to_nm=maximum_px_to_nm,\n",
+    "        use_grains_with_only_one_molecule=use_grains_with_only_one_molecule,\n",
+    "    )\n",
+    "\n",
+    "    fig, ax = plt.subplots(figsize=(5, 5))\n",
+    "    p2nms = np.array(p2nms)\n",
+    "    ax.scatter(x=plengs, y=rmses, s=4, c=p2nms, cmap=\"viridis\")\n",
+    "    cbar = plt.colorbar(ax.collections[0], ax=ax)\n",
+    "\n",
+    "    plt.xlabel(\"pleng\")\n",
+    "    plt.ylabel(\"rmse\")\n",
+    "    plt.title(f\"pleng vs rmse for {sample_type}, n={num_molecules_processed} L={maximum_length_nm}\")\n",
+    "    plt.show()\n",
+    "\n",
+    "    # calculate a weighted average, inversely proportional to the rmse\n",
+    "    weighted_average = np.average(plengs, weights=1 / np.array(rmses))\n",
+    "    print(f\"rmse weighted average: {weighted_average}\")\n",
+    "\n",
+    "    non_weighted_average = np.mean(plengs)\n",
+    "    print(f\"non weighted average: {non_weighted_average}\")\n",
+    "\n",
+    "    results[sample_type] = {\n",
+    "        \"plengs\": plengs,\n",
+    "        \"rmses\": rmses,\n",
+    "        \"p2nms\": p2nms,\n",
+    "        \"weighted_average\": weighted_average,\n",
+    "        \"non_weighted_average\": non_weighted_average,\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "# plot kde of plengs in results\n",
+    "fig, ax = plt.subplots(figsize=(10, 10))\n",
+    "for sample_type, data in results.items():\n",
+    "    plengs = data[\"plengs\"]\n",
+    "    sns.kdeplot(\n",
+    "        plengs,\n",
+    "        label=f\" {sample_type}\\n   | n: {len(plengs)}\\n   | mean: {np.mean(plengs):.2f} | std: {np.std(plengs):.2f} |\\n\",\n",
+    "        ax=ax,\n",
+    "    )\n",
+    "plt.legend()\n",
+    "plt.title(f\"plengs L={maximum_length_nm}\")\n",
+    "plt.xlabel(\"pleng (nm)\")\n",
+    "plt.ylabel(\"density\")\n",
+    "plt.show()\n",
+    "\n",
+    "# plot another kde but using samples that contain nickel and samples that contain magnesium as the two groups\n",
+    "fig, ax = plt.subplots(figsize=(10, 10))\n",
+    "nickel_plengs = results[\"nickel-relaxed\"][\"plengs\"] + results[\"nickel-supercoiled\"][\"plengs\"]\n",
+    "magnesium_plengs = (\n",
+    "    results[\"magnesium-unknot-plasmid-nicked\"][\"plengs\"] + results[\"magnesium-unknot-plasmid-supercoiled\"][\"plengs\"]\n",
+    ")\n",
+    "sns.kdeplot(\n",
+    "    nickel_plengs,\n",
+    "    label=f\"nickel\\n n:{len(nickel_plengs)}\\n mean: {np.mean(nickel_plengs):.2f} std: {np.std(nickel_plengs):.2f}\",\n",
+    "    ax=ax,\n",
+    ")\n",
+    "sns.kdeplot(\n",
+    "    magnesium_plengs,\n",
+    "    label=f\"magnesium\\n n:{len(magnesium_plengs)}\\n mean: {np.mean(magnesium_plengs):.2f} std: {np.std(magnesium_plengs):.2f}\",\n",
+    "    ax=ax,\n",
+    ")\n",
+    "plt.legend()\n",
+    "plt.title(\"nickel vs magnesium plengs\")\n",
+    "plt.xlabel(\"pleng (nm)\")\n",
+    "plt.ylabel(\"density\")\n",
+    "plt.show()"
    ]
   }
  ],
