Plot pleng as a function of L

--- a/pleng.ipynb
+++ b/pleng.ipynb
@@ -445,6 +445,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# See what happens to a dataset when changing maximum length\n",
+    "sample_type = \"magnesium-unknot-plasmid-nicked\"\n",
+    "data_dir = Path(f\"/Users/sylvi/topo_data/pleng/topology-data-check/processed-data-{sample_type}\")\n",
+    "maximum_px_to_nm = 1.0\n",
+    "use_grains_with_only_one_molecule = True\n",
+    "assert data_dir.exists()\n",
+    "\n",
+    "maximum_lengths = list(range(8, 30, 1))\n",
+    "average_plengs = []\n",
+    "\n",
+    "for maximum_length_nm in maximum_lengths:\n",
+    "    plengs, rmses, p2nms, num_molecules_processed = multi_file_pleng(\n",
+    "        data_dir=data_dir,\n",
+    "        maximum_length_nm=maximum_length_nm,\n",
+    "        maximum_px_to_nm=maximum_px_to_nm,\n",
+    "        use_grains_with_only_one_molecule=use_grains_with_only_one_molecule,\n",
+    "    )\n",
+    "\n",
+    "    non_weighted_average = np.mean(plengs)\n",
+    "    average_plengs.append(non_weighted_average)\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.plot(maximum_lengths, average_plengs)\n",
+    "plt.xlabel(\"maximum length\")\n",
+    "plt.ylabel(\"average pleng\")\n",
+    "plt.title(f\"average pleng vs maximum length for {sample_type}\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "sample_types = [\n",
     "    \"magnesium-unknot-plasmid-nicked\",\n",
     "    \"magnesium-unknot-plasmid-supercoiled\",\n",
