--- a/notebooks/OUTDATED-03-Plotting-scans.ipynb
+++ b/notebooks/OUTDATED-03-Plotting-scans.ipynb
@@ -70,11 +70,11 @@
     "    print(f\"filename               : {filename}\")\n",
     "    print(f\"uploaded_file[filename]['metadata'] : {uploaded_file[filename]['metadata']}\")\n",
     "    # print(f\"uploaded_file          : {str(uploaded_file.keys()[0])}\")\n",
-    "    content = uploaded_file[filename][\"content\"]\n",
+    "    content = uploaded_file[filename][\"content\"]  # noqa: F841\n",
     "\n",
     "\n",
     "upload_button = widgets.FileUpload(accept=\".npy\", multiple=False)\n",
-    "display(upload_button)\n",
+    "display(upload_button)  # noqa: F821\n",
     "# select_file_upload.observe(on_file_upload, names=\"value\")"
    ]
   },
